# rollups-examples

./: .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .markdownlint-cli2.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  base-docker-riscv.hcl  base.hcl  deploy-testnet.yml  docker-compose-host-testnet.yml  docker-compose-host.yml  docker-compose-testnet.yml  docker-compose-validator.yml  docker-compose.yml  env.arbitrum_goerli  env.gnosis_chiado  env.goerli  env.optimism_goerli  env.polygon_mumbai  env.sepolia  new-build-base.hcl
auction/: .dockerignore  Dockerfile  README.md  dapp.json  deployments  docker-bake.override.hcl  docker-compose-testnet.override.yml  docker-compose.override.yml  entrypoint.sh  requirements.txt  setup_auction_localhost.sh
biometrics/: README.md  biometrics.py  dapp.json  deploy-testnet.yml  docker-bake.hcl  docker-bake.override.hcl  docker-compose-host.yml  docker-compose-testnet.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
build-docker-riscv/: Dockerfile  run-machine-console.sh
calc/: README.md  docker-compose-host.yml
echo-rust/: Cargo.toml  Dockerfile  Makefile  README.md  dapp.json  docker-bake.override.hcl  docker-compose.override.yml  entrypoint.sh  riscv64g-cartesi-linux-gnu.json  riscv64ima-cartesi-linux-gnu.json
echo-rust/backend/: .gitignore  Cargo.toml  Makefile  build-dapp-fs.sh  run-host.sh
echo-rust/src/: main.rs
rust-mandelbrot-nft/: Cargo.toml  README.md  docker-bake.override.hcl  docker-compose.override.yml  entrypoint.sh
rust-mandelbrot-nft/src/: main.rs
(+1071 files in other folders)
